--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -18,9 +18,9 @@
 }
 
 
-.fa-gear {
-    color: lightblue;
-    font-size: 25px;
+.fa-cog {
+    color: rgb(89, 200, 241, 1);
+    font-size: 30px;
 }
 
 .wd-users {
